# tictactoe

./: README.md  assignment2.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/environment.-3152/: .ghc.environment.aarch64-darwin-9.2.7
src/: Game.hs  Grid.hs  Main.hs  SampleGrid.hs  TicTacToe.hs
